Downgraded to JDK 8 for compatibility with Jenkins